# code_summarizer

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  code-summarizer-ENHANCED.md
.ai/: ARCHITECTURE.md  CONVENTIONS.md  TOOLS.md
src/: config.rs  error.rs  main.rs
src/analyzer/: dependencies.rs  hotspots.rs  mod.rs  semantic.rs  stats.rs  structure.rs
src/code_index/: client.rs
src/git/: history.rs  mod.rs  staleness.rs
src/llm/: mod.rs  ollama.rs
src/summarizer/: architecture.rs  deps_graph.rs  hotspots_gen.rs  mod.rs  modules.rs
src/templates/: builtin.rs  mod.rs  renderer.rs
