[package]
name = "code-summarizer"
version = "0.1.0"
edition = "2021"
description = "Generates hierarchical, AI-optimized markdown summaries of codebase architecture"
authors = ["Mason"]
license = "MIT"

[dependencies]
# Core functionality
walkdir = "2.5"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

# Template rendering
tera = "1.19"

# Git integration
git2 = "0.19"

# HTTP client for LLM integration
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1.37", features = ["full"] }

# Directories
dirs = "5.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Date/time
chrono = "0.4"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"

[[bin]]
name = "code-summarizer"
path = "src/main.rs"
